# rhdh-ai-catalog-cli

./: .gitignore  Dockerfile.location  Makefile  README.md  compare.yaml  go.mod  go.sum
.github/: renovate.json
assets/bridge/: route.yaml  (+3 more)
docs/: DEVELOPMENT.md  background.md  roadmap.md
pkg/: pyproject.toml
pkg/cmd/cli/: root.go  root_test.go
pkg/cmd/cli/backstage/: apis.go  apis_test.go  components.go  components_test.go  constants.go  entities.go  entities_test.go  interfaces.go  kind_api.go  kind_component.go  kind_entity.go  kind_resource.go  locations.go  locations_test.go  resources.go  resources_test.go  rest.go  rest_test.go  util.go
pkg/cmd/cli/gin-gonic-http-srv/: server.go
pkg/cmd/cli/gin-gonic-http/client/: create.go  delete.go  import.go  ready.go  struct.go
pkg/cmd/cli/gin-gonic-http/server/: server.go
pkg/cmd/cli/kserve/: kserve.go  kserve_test.go
pkg/cmd/cli/kubeflowmodelregistry/: inferenceservice.go  kfmr.go  kfmr_test.go  modelartifact.go  modelversion.go  registeredmodel.go  rest.go  rest_test.go  servingenvironment.go
pkg/cmd/server/gin-gonic-http/client/: add_content.go  rest.go
pkg/cmd/server/gin-gonic-http/server/: server.go
pkg/cmd/server/location/client/: create.go  rest.go
pkg/cmd/server/location/server/: server.go
pkg/cmd/server/rhoai-normalizer/: controller.go  controller_test.go
pkg/cmd/server/storage/: interface.go  rest.go  server.go
pkg/cmd/server/storage/configmap/: storage.go
pkg/mcp-bac/: server.py
pkg/rest/: backstage.go
pkg/types/: storage.go
pkg/util/: constants.go  k8s-client.go  utils.go
(+21 files in other folders)
